--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body {
-  @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&family=Poppins:wght@100;300&display=swap");
-  font-family: "Nunito", sans-serif;
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
   margin: 0;
 
   background: #222;
@@ -10,7 +8,6 @@ body {
 }
 
 .App {
-  font-family: "Nunito";
   width: 960px;
   margin: 0 auto;
 }
